tests/typing/bad/testfile-deref-5.c
#include <stdbool.h>
#include <stdlib.h>
#include <stdio.h>

void putchar() {}
int main() {}

